# observability_and_telemetry

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  justfile  loki.yml  prometheus.yml  pyproject.toml
alloy/: config.alloy
app/: api.py  observability.py
examples/: example.rest
grafana/provisioning/datasources/: datasources.yml
infra/: docker-compose.api.yml  docker-compose.obs.yml  docker-compose.yml
infra/config/: mimir.yml  tempo.yml
src/: __init__.py  api.py  observability.py
src/endpoints/: __init__.py  end1.py  end2.py
